--- a/npm/package.json
+++ b/npm/package.json
@@ -12,6 +12,6 @@
     "locations"
   ],
   "author": "Raman Lamichhane",
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "https://github.com/ramanic/Nepal.js"
 }
